<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c6b6a5"
    tools:context=".Final_drySkin">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dryPic"
            android:layout_width="273dp"
            android:layout_height="209dp"
            android:src="@drawable/final_dry" />

        <TextView
            android:id="@+id/dry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/DiscussFinal_Dry"
            android:textColorHint="#9e6967"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/dryInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/Oil_info"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/skin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/SkinFeature"
            android:textColorHint="#454141"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="200dp"
            android:layout_height="68dp"
            android:layout_marginTop="10dp"
            android:text="肌膚有明顯乾燥緊繃不適感，毛孔細小容易脫皮長斑和生成皺紋。"
            android:textColorHint="#9A8D7F" />

        <Button
            android:id="@+id/shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/ProdRecommend"
            android:onClick="skinDry"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:onClick="BackHome"
            android:hint="@string/BackHome"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>