<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c6b6a5"
    tools:context=".Final_oilSkin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/oilPic"
                android:layout_width="273dp"
                android:layout_height="209dp"
                android:src="@drawable/final_oil" />

            <TextView
                android:id="@+id/oil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/DiscussFinal_Oil"
                android:textColorHint="#9e6967"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/oilInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/Oil_info"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/skin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/SkinFeature"
                android:textAlignment="center"
                android:textColorHint="#454141"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/oilGuild"
                android:layout_width="200dp"
                android:layout_height="68dp"
                android:layout_marginTop="10dp"
                android:text="肌膚有明顯出油感，皮脂分泌旺盛 毛孔粗大、膚色較為黯沉。"
                android:textColorHint="#9A8D7F" />

            <Button
                android:id="@+id/shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/ProdRecommend"
                android:onClick="skinOil"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:hint="@string/BackHome"
                android:onClick="BackHome"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>