<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="9dp"
                android:text="Name"
                android:textSize="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:text="你好，"
                android:textAlignment="center"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/biglogo"
        app:layout_constraintEnd_toEndOf="@id/nameLayout"
        app:layout_constraintTop_toTopOf="@id/nameLayout" />

    <LinearLayout
        android:id="@+id/testingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/discuss"
                android:layout_width="91dp"
                android:layout_height="96dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/menu_skindiscuss"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnDiscuss"
                android:layout_width="128dp"
                android:layout_height="60dp"
                android:layout_marginStart="38dp"
                android:hint="@string/SkinDiscuss"
                android:onClick="skinDiscuss"
                android:textColorHint="#514F4F"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/discuss"
                app:layout_constraintStart_toEndOf="@+id/discuss"
                app:layout_constraintTop_toTopOf="@id/discuss" />

            <ImageView
                android:id="@+id/needs"
                android:layout_width="76dp"
                android:layout_height="66dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="22dp"
                android:src="@drawable/menu_skinneeds"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/discuss" />

            <Button
                android:id="@+id/btnNeeds"
                android:layout_width="128dp"
                android:layout_height="60dp"
                android:layout_marginStart="53dp"
                android:hint="@string/SkinNeeds"
                android:onClick="skinNeeds"
                android:textColorHint="#514F4F"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/needs"
                app:layout_constraintStart_toEndOf="@+id/needs"
                app:layout_constraintTop_toTopOf="@+id/needs" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recommendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testingLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:hint="@string/S_recommendation"
                android:textSize="23dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/price"
                android:layout_width="103dp"
                android:layout_height="78dp"
                android:layout_marginTop="21dp"
                android:src="@drawable/menu_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title2" />

            <Button
                android:id="@+id/btnPrice"
                android:layout_width="128dp"
                android:layout_height="60dp"
                android:layout_marginStart="38dp"
                android:hint="@string/S_price"
                android:onClick="prodPrice"
                android:textColorHint="#514F4F"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/price"
                app:layout_constraintStart_toEndOf="@+id/price"
                app:layout_constraintTop_toTopOf="@id/price" />

            <ImageView
                android:id="@+id/func"
                android:layout_width="77dp"
                android:layout_height="75dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/menu_func"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price" />

            <Button
                android:id="@+id/btnFunc"
                android:layout_width="128dp"
                android:layout_height="60dp"
                android:layout_marginStart="52dp"
                android:hint="@string/S_function"
                android:onClick="prodFunc"
                android:textColorHint="#514F4F"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/func"
                app:layout_constraintStart_toEndOf="@+id/func"
                app:layout_constraintTop_toTopOf="@id/func" />

            <ImageView
                android:id="@+id/brands"
                android:layout_width="90dp"
                android:layout_height="75dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/menu_brands"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/func" />

            <Button
                android:id="@+id/btnBrands"
                android:layout_width="128dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:hint="@string/S_brand"
                android:onClick="prodBrand"
                android:textColorHint="#514F4F"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/brands"
                app:layout_constraintStart_toEndOf="@+id/brands"
                app:layout_constraintTop_toTopOf="@id/brands" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnProcess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="13dp"
        android:hint="@string/S_process"
        android:onClick="skinProcess"
        app:layout_constraintEnd_toEndOf="@id/recommendLayout"
        app:layout_constraintTop_toBottomOf="@id/recommendLayout"
        app:layout_goneMarginEnd="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>